--- a/templates/base.html
+++ b/templates/base.html
@@ -27,30 +27,37 @@
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
+    <header>
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-light" id="navbar-bg-color">
+            <div class="container-fluid">
+                <a class="navbar-brand" id="main-logo" href="{% url 'home' %}">
+                    Good News Media
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
+                                href="#">Home</a>
+                        </li>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">c<span class="red-o">o</span>de<span
-                        class="thin">|star</span></span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
-                            href="#">Home</a>
-                    </li>
-
-                </ul>
-                <span class="navbar-text text-muted">
-                    adventures of a software developer
-                </span>
+                    </ul>
+                    <span class="navbar-text ">
+                        logged out
+                    </span>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+        
+        <!-- Landing Banner Img -->
+        <section class="landing-banner">
+            <!-- Landing Img here with a quote -->
+        </section>
+    </header>
 
     <main class="flex-shrink-0 main-bg">
 
@@ -61,9 +68,10 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">Made by Code Instituters</p>
-        <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
+    <footer class="footer mt-auto py-3 footer-color">
+        <p class="m-0 text-center text-black">Good News Media</p>
+        <p class="m-0 text-center text-black">Follow us:
+            <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
             <i class="fab fa-instagram-square ms-3"></i>
             <i class="fab fa-youtube-square ms-3"></i>
