--- a/templates/base.html
+++ b/templates/base.html
@@ -47,16 +47,11 @@
 
                     </ul>
                     <span class="navbar-text ">
-                        logged out
+                        you are logged out
                     </span>
                 </div>
             </div>
         </nav>
-        
-        <!-- Landing Banner Img -->
-        <section class="landing-banner">
-            <!-- Landing Img here with a quote -->
-        </section>
     </header>
 
     <main class="flex-shrink-0 main-bg">
