--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -48,7 +48,7 @@
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link next-btn" > NEXT &raquo;</a></li>
             {% endif %}
         </ul>
     </nav>
