--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 body {
     background-color: #F9FAFC;
 }
@@ -7,29 +10,31 @@ body {
 }
 
 
-#main-logo {
-    color: #000000;
-}
-
-
 .footer-color {
     background-color: #98FC03;
 }
 
 .footer-color > p > i {
     color: #000000;
-
 }
+
+.footer-info {
+    justify-content: space-between;
+}
+
+.logo {
+    font-family: Inika, sans-serif;
+    font-weight: 600;
+    font-size: 2rem;
+}
+
 .brand {
     font-family: Lato, sans-serif;
     font-size: 1.4rem;
-    font-weight: 700;
-    color: #4A4A4F;
+    font-weight: 100;
+    color: #000;
 }
 
-.red-o {
-    color: #E84610;
-}
 
 .landing-banner {
     background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.50)), url(../images/bg-landing-draft-2.jpg);
@@ -97,7 +102,7 @@ body {
 }
 
 .masthead-text {
-    background-color: #445261;
+    background-color: #3b4a5a;
     color: white;
     position: relative;
 }
@@ -128,7 +133,15 @@ body {
 
 .post-link:hover,
 .page-link {
-    color: #E84610;
+    color: #203600;
+}
+
+.next-btn {
+    border-radius: 2rem;
+    padding: 15px;
+    font-weight: 600;
+    background-color: #98FC03;
+    border: 0;
 }
 
 .post-title {
@@ -192,6 +205,9 @@ body {
 
 
 /* ----------------------------------------------------- Media Queries */
+
+
+/* Mobile Styles */
 
 @media screen and (max-width: 450px) {
     .landing-banner {
