--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,8 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light" id="navbar-bg-color">
             <div class="container-fluid">
-                <a class="navbar-brand" id="main-logo" href="{% url 'home' %}">
-                    Good News Media
+                <a class="navbar-brand logo" href="{% url 'home' %}">
+                    GoodNews
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,11 +44,21 @@
                             <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
                                 href="#">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == about_url %}active{% endif %}" aria-current="page"
+                                href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == contact_url %}active{% endif %}"
+                                aria-current="page" href="#">Contact</a>
+                        </li>
 
                     </ul>
                     <span class="navbar-text ">
                         you are logged out
                     </span>
+                    <a class="nav-link {% if request.path == about_url %}active{% endif %}" aria-current="page"
+                        href="#">Register/Login</a>
                 </div>
             </div>
         </nav>
@@ -64,13 +74,23 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 footer-color">
-        <p class="m-0 text-center text-black">Good News Media</p>
-        <p class="m-0 text-center text-black">Follow us:
-            <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-twitter-square ms-3"></i>
-            <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i>
-        </p>
+        <div class="footer-logo">
+            <p class="m-0 text-center text-black logo">GoodNews Media</p>
+        </div>
+        <div class="footer-info d-flex">
+            <p class="m-0 text-center text-black">Follow us:
+                <i class="fab fa-facebook-square ms-3"></i>
+                <i class="fab fa-twitter-square ms-3"></i>
+                <i class="fab fa-instagram-square ms-3"></i>
+                <i class="fab fa-youtube-square ms-3"></i>
+            </p>
+            <p>
+                X (logo)
+            </p>
+            <p>
+                Contact Information, maybe copyright ?
+            </p>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
