--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -55,5 +55,10 @@
     {% endif %}
 </div>
 
+<div id="user-posts">
+    <!-- This is where authenticated users can add posts of their own -->
+     <!-- Section will only be accessible to authenticated users, if user is unregistered it will ask if they want to register/ login -->
+</div>
+
 <!-- index.html content ends here -->
 {% endblock %}
