added styling to home page

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -10,6 +10,12 @@
      <p> this is the quote on the landing banner </p>
 </section>
 
+<div class="article-section-quote">
+
+    <p>“Journalism is about results. It's about affecting your community or society in the most progressive way.” - Anas Aremeyaw Anas</p>
+
+</div>
+
 <div class="container">
     <div class="row">
 
@@ -17,7 +23,7 @@
         <div class="col-12 mt-3 left">
             <div class="row">
                 {% for post in post_list %}
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
