add changes to positions of articles in article section

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -10,15 +10,8 @@
      <p> this is the quote on the landing banner </p>
 </section>
 
-<div class="article-section-quote">
-
-    <p>“Journalism is about results. It's about affecting your community or society in the most progressive way.” - Anas Aremeyaw Anas</p>
-
-</div>
-
-<div class="container">
+<div class="container article-list">
     <div class="row">
-
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
@@ -59,6 +52,10 @@
         </ul>
     </nav>
     {% endif %}
+</div>
+
+<div class="article-section-quote">
+    <p>“Journalism is about results. It's about affecting your community or society in the most progressive way.” - Anas Aremeyaw Anas</p>
 </div>
 
 <div id="user-posts">
