--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,22 @@ body {
     font-size: 130%;
 }
 
+
+.add-post-content {
+    color: #fff;
+    text-align: center;
+    justify-content: space-evenly;
+    margin: 20px 0;
+}
+
+.add-post-link-box {
+    
+}
+
+
+/* -------------------------------------------------------------- Organise all this */
+
+
 .thin {
     font-weight: 300;
 }
