add link to create user post content on post detail page:

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -33,7 +33,7 @@
         <div class="col-12 d-flex add-post-content">
             <p class="add-post-link-box">
                 Thanks for reading! <br>
-                <a class="add-post-link">
+                <a href="#" class="add-post-link">
                     Share a story here
                 </a>
             </p>
