add about content and user icon

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-<div class="container mt-5">
+<div class="container mt-5 about-content ">
     <div class="row">
         <div class="col-4 text-center">
             <img src="{% static 'images/bg-landing-draft-small-screen.png' %}" width="75%">
