--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,6 +76,11 @@ body {
     line-height: 50px;
 }
 
+/* -------------------------------------------------------------- About content */
+
+.about-content {
+    color: #FF44A7;
+}
 
 /* -------------------------------------------------------------- Organise all this */
 
