--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -61,6 +61,30 @@ body {
     font-size: 130%;
 }
 
+
+.add-post-content {
+    color: #fff;
+    text-align: center;
+    justify-content: space-evenly;
+    margin: 20px 0;
+}
+
+.add-post-link-box {
+    border: 1px solid white;
+    border-radius: 2em;
+    padding: 15px;
+    line-height: 50px;
+}
+
+/* -------------------------------------------------------------- About content */
+
+.about-content {
+    color: #FF44A7;
+}
+
+/* -------------------------------------------------------------- Organise all this */
+
+
 .thin {
     font-weight: 300;
 }
