--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,10 @@
                     </ul>
                     {% if user.is_authenticated %}
                     <span class="navbar-text">
-                        You are logged in as {{ user }}
+                        You are logged in as <a href="#">
+                            {{ user }}
+                            <i class="fa-regular fa-user"></i>
+                        </a>
                     </span>
                     <ul class="list-unstyled">
                         <li class="nav-item">
@@ -116,9 +119,12 @@
         </div>
     </footer>
 
+    <!-- Bootstrap script tags -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
+    <!-- Font awesome icons -->
+    <script src="https://kit.fontawesome.com/f5f9306f1c.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
