--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
-{% url 'contact' as contact_url %}
+
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -55,7 +55,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% if request.path == contact_url %}active{% endif %}"
-                                aria-current="page" href="{% url 'contact' %}">Contact</a>
+                                aria-current="page" href="#contact">Contact</a>
                         </li>
 
                     </ul>
