add edit and delete functionality to logged in user comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -141,6 +141,9 @@
     </script>
     <!-- Font awesome icons -->
     <script src="https://kit.fontawesome.com/f5f9306f1c.js" crossorigin="anonymous"></script>
+    
+    {% block extras %}
+    {% endblock %}
 </body>
 
 </html>
