add comment and like icons for blog cards on home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,6 +84,9 @@ body {
 
 /* -------------------------------------------------------------- Organise all this */
 
+.card-info {
+    justify-content: space-between;
+}
 
 .thin {
     font-weight: 300;
