--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -30,8 +30,22 @@
                             </a>
 
                             <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on}}
-                            </p>
+
+                            <div class="d-flex card-info">
+                                <p class="card-text text-muted h6">
+                                    {{ post.created_on}}
+                                </p>
+
+                                <i class="far fa-comments">
+                                    {{ comment_count }}
+                                    5 --
+                                    <i class="fa-regular fa-heart">
+                                        <!-- this will display the like count -->
+                                         3
+                                    </i>
+                                </i>
+                                
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -69,9 +83,9 @@
 <div id="user-posts">
     <!-- This is where authenticated users can add posts of their own -->
     <!-- Section will only be accessible to authenticated users, if user is unregistered it will ask if they want to register/ login -->
-     <p>
-        Test 
-     </p>
+    <p>
+        Test
+    </p>
 </div>
 {% endif %}
 
