enable serving of image files

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
 
 <!-- index.html content starts here -->
@@ -20,6 +20,12 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
+                                {% if "placeholder" in post.featured_image.url %}
+                                <img class="card-img-top" src="{% static 'images/bg-landing-draft.png' %}"
+                                    alt="placeholder image">
+                                {% else %}
+                                <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="{{ post.title }}">
+                                {% endif %}
                                 <div class="image-flash">
                                     <p class="author">by: {{ post.author }}</p>
                                 </div>
@@ -41,10 +47,10 @@
                                     5 --
                                     <i class="fa-regular fa-heart">
                                         <!-- this will display the like count -->
-                                         3
+                                        3
                                     </i>
                                 </i>
-                                
+
                             </div>
                         </div>
                     </div>
