--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -21,8 +21,8 @@
                         <div class="card-body">
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
-                                <img class="card-img-top" src="{% static 'images/bg-landing-draft.png' %}"
-                                    alt="placeholder image">
+                                <img class="card-img-top" src="{% static 'images/feat-img-example.png' %}"
+                                    alt="placeholder image" width="300">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="{{ post.title }}">
                                 {% endif %}
