--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,7 +12,11 @@
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/bg-landing-draft-small-screen.png' %}" class="scale" alt="placeholder">
+                {% if "placeholder" in post.featured_image.url %}
+                <img src="{% static 'images/bg-landing-draft-small-screen.png' %}" class="scale" alt="placeholder image">
+                {% else %}
+                <img src="{{ post.featured_image.url }}" class="scale" alt="{{ post.title }}">
+                {% endif %}
             </div>
         </div>
     </div>
@@ -141,7 +145,7 @@
             </p>
         </div>
     </div>
-    
+
 </div>
 
 {% endblock content %}
