--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .landing-banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.50)), url(../images/bg-landing-draft-2.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.50)), url(../images/bg-landing-draft.png);
     padding: 150px;
 }
 
@@ -116,7 +116,7 @@ body {
 .image-flash {
     position: absolute;
     bottom: 5%;
-    min-width: 30%;
+    
     left: -2px;
     background-color: #FF44A7;
     border-radius: 2rem;
