create masthead basic styling on post detail html

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -22,7 +22,7 @@
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top" src="{% static 'images/feat-img-example.png' %}"
-                                    alt="placeholder image" width="300">
+                                    alt="placeholder image">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="{{ post.title }}">
                                 {% endif %}
