--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,6 +88,11 @@ body {
     justify-content: space-between;
 }
 
+.image-container {
+    margin-bottom: 30px;
+    width: 80%;
+}
+
 .thin {
     font-weight: 300;
 }
@@ -134,16 +139,11 @@ body {
 }
 
 .masthead {
-    margin-top: 10px;
-    overflow: hidden;
-    position: relative;
-    display: inline-block;
-    height: 33vh;
-    width: 100%;
+    margin-top: 20px;
 }
 
 .masthead-text {
-    background-color: #3b4a5a;
+    background-color: #FF44A7;
     color: white;
     position: relative;
 }
@@ -153,19 +153,7 @@ body {
     overflow: hidden;
 }
 
-.masthead-image:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 90%;
-    height: 100%;
-    width: 150%;
-    background: #445261;
-    -webkit-transform: skew(15deg);
-    -moz-transform: skew(15deg);
-    transform: skew(15deg);
-    z-index: 100;
-}
+
 
 .post-link {
     text-decoration: none;
