add margin top to contact section to temporarily push the form lower on page

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -26,8 +26,8 @@
         </div>
 </section>
 
-<section id="about-img-banner">
-    <!-- Image banner -->
+<section id="about-img-banner" class="about-banner container-fluid">
+
 </section>
 
 <section id="contact">
