add message tags to settings

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -82,9 +82,15 @@ body {
     color: #FF44A7;
 }
 
-.about-banner {
+#about-img-banner {
     background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.50)), url(../images/bg-landing-draft.png);
     
+}
+
+/* ------------------------------------------------------------------- Temporarily pushing contact form lower down */
+
+#contact {
+    margin-top: 200px;
 }
 
 /* -------------------------------------------------------------- Organise all this */
