--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
+{% load crispy_forms_tags %}
 
 <!-- index.html content starts here -->
 
@@ -41,14 +42,8 @@
                                 <p class="card-text text-muted h6">
                                     {{ post.created_on}}
                                 </p>
-
                                 <i class="far fa-comments">
                                     {{ comment_count }}
-                                    5 --
-                                    <i class="fa-regular fa-heart">
-                                        <!-- this will display the like count -->
-                                        3
-                                    </i>
                                 </i>
 
                             </div>
