--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
+{% url 'user_profile' as profile_url %}
 
 
 <!DOCTYPE html>
@@ -57,7 +58,7 @@
                     </ul>
                     {% if user.is_authenticated %}
                     <span class="navbar-text">
-                        You are logged in as <a href="#">
+                        You are logged in as <a href="{% url 'user_profile' %}">
                             {{ user }}
                             <i class="fa-regular fa-user"></i>
                         </a>
