add image to user profile

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -42,10 +42,9 @@
                                 <p class="card-text text-muted h6">
                                     {{ post.created_on}}
                                 </p>
-                                <i class="far fa-comments">
-                                    {{ comment_count }}
-                                </i>
-
+                                <i class="far fa-comments"></i>
+                                {{ comment_count }}
+                                
                             </div>
                         </div>
                     </div>
