--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -42,9 +42,13 @@
                                 <p class="card-text text-muted h6">
                                     {{ post.created_on}}
                                 </p>
-                                <i class="far fa-comments"></i>
-                                {{ comment_count }}
-                                
+                                <div>
+                                    <i class="far fa-comments">
+                                    </i>
+                                    {{ post.comment_count }}
+                                </div>
+
+
                             </div>
                         </div>
                     </div>
