--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -48,6 +48,8 @@
                             bio: {{ user.profile.bio }}
                         </li>
                     </ul>
+                    <a href="{% url 'profile-update' %}" class="btn btn-primary">Update Profile</a>
+                    <a href="{% url 'profile-delete' %}" class="btn btn-danger">Delete Profile</a>
                 </div>
             </div>
         </div>
