--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -2,16 +2,17 @@
 {% block content %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load django_summernote %} 
 
 <section id="profile-page-banner" class="landing-banner container-fluid"></section>
 
 
-<div class="container mt-5"></div>
+<div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
             <!-- Profile Picture -->
             <div class="card text-center">
-                <img src="{% if user.profile.profile_img %}{{ user.profile.profile_img.url }}{% else %}{% static 'default-avatar.png' %}{% endif %}" 
+                <img src="{% if request.user.profile.profile_img %}{{ request.user.profile.profile_img.url }}{% else %}{% static 'feat-img-example.png' %}{% endif %}" 
                      class="card-img-top rounded-circle mt-3 mx-auto" 
                      alt="Profile Picture" 
                      style="width: 150px; height: 150px; object-fit: cover;">
@@ -56,6 +57,32 @@
     </div>
 </div>
 
+
+<!-- Creating User Posts -->
+<div class="row">
+    <div class="col-12 d-flex add-post-content">
+        {% if user.is_authenticated %}
+        <div>
+            This is where the logged in user can create their own post.
+            <form id="userPostForm" method="post">
+                {{ user_post_form | crispy}}
+                {% csrf_token %}
+                <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
+            </form>
+        </div>
+        {% else %}
+        <p class="add-post-link-box">
+            Thanks for reading! <br>
+            <a href="{% url 'account_signup' %}">
+                Sign Up to share your own story
+            </a>
+            {% endif %}
+        </p>
+        <p>
+            Quote about inspiring creativity through truth and happiness?
+        </p>
+    </div>
+</div>
 
 
 {% endblock %}
