--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% load django_summernote %} 
+{% load django_summernote_tags %}
 
 <section id="profile-page-banner" class="landing-banner container-fluid"></section>
 
@@ -65,8 +65,8 @@
         <div>
             This is where the logged in user can create their own post.
             <form id="userPostForm" method="post">
-                {{ user_post_form | crispy}}
                 {% csrf_token %}
+                {{ user_post_form|crispy }}
                 <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
             </form>
         </div>
@@ -84,5 +84,9 @@
     </div>
 </div>
 
+{% block extras %}
+<script src="{% static 'js/summernote-init.js' %}"></script> <!-- Link to your new JS file -->
+{% endblock %}
 
 {% endblock %}
+
