--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -107,7 +107,11 @@
                 <h3>Leave a comment:</h3>
                 <!-- Posting as section with user's profile image -->
                 <div class="d-flex align-items-center mb-2">
-                    <img src="{% if user.profile.profile_img %}{{ user.profile.profile_img.url }}{% else %}{% static 'images/feat-img-example.png' %}{% endif %}"
+                    <img src="{% if user.profile.profile_img %}
+                    {{ user.profile.profile_img.url }}
+                    {% else %}
+                    {% static 'images/feat-img-example.png' %}
+                    {% endif %}"
                         class="rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;"
                         alt="Profile Picture">
                     <p class="mb-0">Posting as: {{ user.username }}</p>
@@ -120,15 +124,13 @@
                 </form>
                 {% else %}
                 <p><a href="{% url 'account_login' %}">
-                    Log in
-                </a>
+                        Log in
+                    </a>
                     to leave a comment
                 </p>
                 {% endif %}
             </div>
         </div>
-
-
     </div>
 
     <!-- Delete confirmation modal -->
@@ -150,33 +152,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Creating User Posts -->
-    <div class="row">
-        <div class="col-12 d-flex add-post-content">
-            {% if user.is_authenticated %}
-            <div>
-                This is where the logged in user can create their own post.
-                <form id="userPostForm" method="post">
-                    {{ user_post_form | crispy}}
-                    {% csrf_token %}
-                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
-                </form>
-            </div>
-            {% else %}
-            <p class="add-post-link-box">
-                Thanks for reading! <br>
-                <a href="{% url 'account_signup' %}">
-                    Sign Up to share your own story
-                </a>
-                {% endif %}
-            </p>
-            <p>
-                Quote about inspiring creativity through truth and happiness?
-            </p>
-        </div>
-    </div>
-
 </div>
 
 {% endblock content %}
