--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -35,6 +35,20 @@
             </div>
         </div>
     </div>
+
+    <!-- Likes -->
+
+    <form action="{% url 'like_post' post.id %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Like</button>
+    </form>
+
+    <form action="{% url 'dislike_post' post.id %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Dislike</button>
+    </form>
+
+
     <!-- Displaying count of comments -->
     <div class="row">
         <div class="col-12">
@@ -111,8 +125,7 @@
                     {{ user.profile.profile_img.url }}
                     {% else %}
                     {% static 'images/feat-img-example.png' %}
-                    {% endif %}"
-                        class="rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;"
+                    {% endif %}" class="rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;"
                         alt="Profile Picture">
                     <p class="mb-0">Posting as: {{ user.username }}</p>
                 </div>
