fixed: user update/delete profile, fixed render file path to include blog/template name

--- a/blog/templates/blog/profile_delete.html
+++ b/blog/templates/blog/profile_delete.html
@@ -9,7 +9,7 @@
     <form method="POST">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Yes, Delete My Profile</button>
-        <a href="{% url 'profile' %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url 'user_profile' %}" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
 {% endblock %}
