--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -47,6 +47,30 @@
         </div>
     </div>
 </div>
+<div id="user-post-list" >
+    <h4>Your Blog Posts</h4>
+    <ul>
+        {% for post in user_posts %}
+            <li>
+                {% if post.slug %}
+                    <a href="{% url 'post_detail' post.slug %}">{{ post.title }}</a>
+                    <span>Published on: {{ post.created_on }}</span>
+                    <!-- Delete Button Form -->
+                    <form action="{% url 'post_delete' post.slug %}" method="POST" style="display:inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this post?');">
+                            Delete
+                        </button>
+                    </form>
+                {% else %}
+                    {{ post.title }} (No slug available)
+                {% endif %}
+            </li>
+        {% empty %}
+            <li>No posts found.</li>
+        {% endfor %}
+    </ul>
+</div>
 
 
 <!-- Creating User Posts -->
