--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -12,10 +12,9 @@
         <div class="col-md-4">
             <!-- Profile Picture -->
             <div class="card text-center">
-                <img src="{% if request.user.profile.profile_img %}{{ request.user.profile.profile_img.url }}{% else %}{% static 'feat-img-example.png' %}{% endif %}" 
-                     class="card-img-top rounded-circle mt-3 mx-auto" 
-                     alt="Profile Picture" 
-                     style="width: 150px; height: 150px; object-fit: cover;">
+                <img src="{% if request.user.profile.profile_img %}{{ request.user.profile.profile_img.url }}{% else %}{% static 'feat-img-example.png' %}{% endif %}"
+                    class="card-img-top rounded-circle mt-3 mx-auto" alt="Profile Picture"
+                    style="width: 150px; height: 150px; object-fit: cover;">
                 <div class="card-body">
                     <h5 class="card-title">{{ request.user.username }}</h5>
                     <p class="card-text">{{ request.user.email }}</p>
@@ -30,15 +29,15 @@
                 </div>
                 <div class="card-body">
                     <ul></ul>
-                        <li>
-                            username: {{ user.username }}
-                        </li>
-                        <li>
-                            location: {{ user.profile.location }}
-                        </li>
-                        <li>
-                            bio: {{ user.profile.bio }}
-                        </li>
+                    <li>
+                        username: {{ user.username }}
+                    </li>
+                    <li>
+                        location: {{ user.profile.location }}
+                    </li>
+                    <li>
+                        bio: {{ user.profile.bio }}
+                    </li>
                     </ul>
                     <a href="{% url 'profile-update' %}" class="btn btn-primary">Update Profile</a>
                     <a href="{% url 'profile-delete' %}" class="btn btn-danger">Delete Profile</a>
@@ -47,29 +46,31 @@
         </div>
     </div>
 </div>
-<div id="user-post-list" >
+<div id="user-post-list">
     <h4>Your Blog Posts</h4>
     <ul>
         {% for post in user_posts %}
-            <li>
-                {% if post.slug %}
-                    <a href="{% url 'post_detail' post.slug %}">{{ post.title }}</a>
-                    <span>Published on: {{ post.created_on }}</span>
-                    <!-- Delete Button Form -->
-                    <form action="{% url 'post_delete' post.slug %}" method="POST" style="display:inline;">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this post?');">
-                            Delete
-                        </button>
-                    </form>
-                {% else %}
-                    {{ post.title }} (No slug available)
-                {% endif %}
-            </li>
+        <li>
+            {% if post.slug %}
+            {{ post.title }}
+            <span>Published on: {{ post.created_on }}</span>
+            <!-- Delete Button Form -->
+            <form action="{% url 'post_delete' post.slug %}" method="POST" style="display:inline;">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger btn-sm"
+                    onclick="return confirm('Are you sure you want to delete this post?');">
+                    Delete
+                </button>
+            </form>
+            {% else %}
+            {{ post.title }} (No slug available)
+            {% endif %}
+        </li>
         {% empty %}
-            <li>No posts found.</li>
+        <li>No posts found.</li>
         {% endfor %}
     </ul>
+</div>
 </div>
 
 
@@ -104,4 +105,3 @@
 {% endblock %}
 
 {% endblock %}
-
